simple-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
        - name: simple
          image: simple-svc
          imagePullPolicy: Never #IfNotPresent, Always
          ports:
            - containerPort: 8080
              name: "http"
