simple-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple
spec:
  selector:
    app: simple
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
